<resources>
    <string name="app_name">ProjectInspire</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_txt_register">Don\'t have an account? Click here</string>
    <string name="main_edit_email_address">Enter Email Address</string>
    <string name="main_edit_password">Enter Password</string>
    <string name="main_txt_forgot_password">Forgot your password?</string>
    <string name="main_btn_login">Login</string>
    <string name="main_btn_register">Sign up</string>
    <string name="title_activity_register_account">Register A New Account</string>
    <string name="lbl_register_description">To create an account, there is some information that is 
        required, please fill in the boxes below and press the \'submit\' button.</string>
    <string name="register_lbl_forename">Forename</string>
    <string name="register_edit_forename">Enter Forename</string>
    <string name="register_lbl_surname">Surname</string>
    <string name="register_edit_surname">Enter Surname</string>
    <string name="register_lbl_email">Email Address</string>
    <string name="register_edit_email">Enter Email Address</string>
    <string name="register_lbl_repeat_email">Repeat Email Address</string>
    <string name="register_edit_repeat_email">Repeat Email Address</string>
    <string name="register_lbl_password">Password</string>
    <string name="register_edit_password">Enter Password</string>
    <string name="register_lbl_repeat_password">Repeat Password</string>
    <string name="register_edit_repeat_password">Repeat Password</string>
    <string name="register_btn_account">Register your account</string>
    <string name="register_lbl_picture">User Picture</string>
    <string name="register_btn_picture">Change Profile Image</string>
    <string name="register_img_picture">User image photo</string>
    <string name="title_activity_user_dashboard">Your Dashboard</string>
    <string name="dashboard_user_name">Adam Stevenson</string>
    <string name="dashboard_user_email_address">Addstevenson@hotmail.com</string>
    <string name="dashboard_user_image">User image</string>
    <string name="dashboard_projects">Projects</string>
    <string name="dashboard_projects_title">Tile of project</string>
    <string name="dashboard_tasks">Tasks</string>
    <string name="dashboard_tasks_title">Title of tasks</string>
    <string name="dashboard_events">Events</string>
    <string name="dashboard_events_title">Title of events</string>
    <string name="dashboard_messages">Messages</string>
    <string name="dashboard_messages_title">Title of messages</string>
    <string name="title_activity_projects">Your Projects</string>
    <string name="projects_create">New Project</string>
    <string name="projects_edit">Edit Project</string>
    <string name="lbl_projects_none">You currently do not have any projects allocated to your account, 
        please accept an invitiation from your messages, or press the "create project" button above.</string>
    <string name="title_activity_user_contacts">UserContactsActivity</string>
    <string name="tab_contacts">Contacts</string>
    <string name="tab_contacts_messages">Messages</string>
    <string name="title_activity_user_contacts_fragment">UserContactsFragment</string>
    <string name="title_activity_user_contacts_messages_fragment">UserContactsMessagesFragment</string>
    <string name="title_activity_user_selected_project">Tasks</string>
    <string name="title_activity_user_selected_project_tasks">Tasks</string>
    <string name="title_activity_user_selected_project_all_files_fragment">Tasks</string>
    <string name="tab_all_tasks">Tasks</string>
    <string name="tab_all_files">Files</string>
    <string name="tab_all_events">Events</string>
    <string name="create_project_lbl_userhelp">To create a project, please enter in the following information and press the \'create\' button</string>
    <string name="title_activity_create_or_edit_project">CreateOrEditProject</string>
    <string name="create_project_lbl_name">Project Name</string>
    <string name="create_project_edit_name">Enter Name</string>
    <string name="create_project_lbl_start_date">Start Date</string>
    <string name="create_project_edit_start_date_hint">Enter Start Date</string>
    <string name="create_project_lbl_finish_date">End Date</string>
    <string name="create_project_edit_finish_date_hint">Enter End Date</string>
    <string name="create_project_lbl_responsible">Assign To</string>
    <string name="create_project_edit_responsible">Assign</string>
    <string name="create_project_lbl_type">Type</string>
    <string name="create_project_edit_type">Enter Type</string>
    <string name="create_project_lbl_description">Additional Notes</string>
    <string name="create_project_edit_description">Enter Notes</string>
    <string name="create_project_btn">Create Project</string>
    <string name="search_project">Search Projects&#8230;</string>
    <string name="create_project_delete_button">Delete Project</string>
    <string name="project_type_prompt">Choose a Type</string>
    <string-array name="project_type_array">
        <item>Individual</item>
        <item>Group</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_create_or_edit_task">CreateOrEditTaskActivity</string>
    <string name="task_create">New Task</string>
    <string name="create_task_lbl_userhelp">To create a task, please enter in the following information and press the \'create\' button</string>
    <string name="create_task_txt_name">Task Name</string>
    <string name="create_task_edit_name">Enter Task Name</string>
    <string name="create_task_txt_assigned">Assigned To</string>
    <string name="create_task_edit_assigned">Assign</string>
    <string name="create_task_txt_category">Category</string>
    <string name="create_task_spinner_category">Select Category</string>
    <string name="create_task_txt_start_date">Start Date</string>
    <string name="create_task_edit_start_date">Enter Start Date</string>
    <string name="create_task_txt_end_date">End Date</string>
    <string name="create_task_edit_end_date">Enter End Date</string>
    <string name="create_task_txt_priority">Priority</string>
    <string name="create_task_edit_priority">Enter Priority</string>
    <string name="create_task_txt_description">Description</string>
    <string name="create_task_edit_description">Enter Description</string>
    <string name="create_task_btn">Create Task</string>
    <string name="search_task">Search Tasks&#8230;</string>
    <string name="task_type_prompt">Choose a Type</string>
    <string name="create_task_delete_button">Delete Task</string>
    <string-array name="task_type_array">
        <item>Critical</item>
        <item>Medium</item>
        <item>Minimal</item>
        <item>Other</item>
    </string-array>
    <string-array name="navigation_drawer_items">
        <item>My Projects</item>
        <item>My Messages</item>
        <item>My Events</item>
        <item>My Groups</item>
        <item>Change Account Details</item>
        <item>Log off</item>
    </string-array>
    <string name="title_activity_create_or_edit_event">CreateOrEditEventActivity</string>
    <string name="title_activity_user_list_all_events">Your Events</string>
    <string name="event_create">New Event</string>
    <string name="lbl_events_none">You currently do not have any events allocated to your account.</string>
    <string name="search_events">Search Events&#8230;</string>
    <string name="create_event_summary">To create an event, please enter in the following information and press the \'create\' button</string>
    <string name="create_event_txt_name">Name</string>
    <string name="create_event_edit_name">Enter Event Name</string>
    <string name="create_event_txt_location">Location</string>
    <string name="create_event_edit_locatioin">Enter Location</string>
    <string name="create_event_txt_description">Description</string>
    <string name="create_event_edit_description">Enter Description</string>
    <string name="create_event_txt_date">Event Date</string>
    <string name="create_event_edit_date">Enter Date</string>
    <string name="create_event_txt_start_time">Start Time</string>
    <string name="create_event_edit_start_time">Enter Time</string>
    <string name="create_event_txt_end_time">End Time</string>
    <string name="create_event_edit_end_time">Enter Time</string>
    <string name="create_event_txt_visibility">Visible To</string>
    <string name="create_event_edit_visibility">Select group</string>
    <string name="create_event_btn">Create Event</string>
    <string name="event_type_prompt">Choose an Event</string>
    <string name="create_event_delete_button">Delete Event</string>
    <string-array name="event_type_array">
        <item>Everyone</item>
        <item>Select Group</item>
        <item>Myself</item>
    </string-array>
    <string name="search_contacts">Search Contacts&#8230;</string>
    <string name="search_messages">Search Messages&#8230;</string>
    <string name="contact_create">New Contact</string>
    <string name="message_create">New Message</string>
    <string name="file_create">New File</string>
    <string name="search_files">Search Files&#8230;</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="forgot_password_description">If you have forgotten your password, enter in your email address below. \n Then please enter the security
         code that is linked to your account.</string>
    <string name="forgot_password_txt_code">Security Code</string>
    <string name="adapter_project_name">Project Name</string>
    <string name="adapter_project_start_date">Start Date</string>
    <string name="adapter_project_end_date">End Date</string>
    <string name="adapter_project_description">Description: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
          ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
           fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
            anim id est laborum."</string>
    <string name="adapter_project_status">Status</string>
    <string name="adapter_task_name">Task Name</string>
    <string name="adapter_task_assigned">Assigned To</string>
    <string name="adapter_task_category">Category</string>
    <string name="adapter_task_start_date">Start Date</string>
    <string name="adapter_task_end_date">End Date</string>
    <string name="adapter_task_priority">Priority</string>
    <string name="adapter_task_description">Description</string>
    <string name="adapter_task_status">Status</string>
    <string name="adapter_contact_name">Contact Name</string>
    <string name="adapter_contact_notes">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
         incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
          ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
           fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
            anim id est laborum.</string>
    <string name="adapter_contact_image">Image</string>
    <string name="adapter_contact_space"></string>
    <string name="btn_change_user_details">Change Details</string>
    <string name="change_user_details_description">Information relating to your account that can be changed is shown below. To change the email address used, please contact \'AddStevenson@hotmail.com\'.</string>
</resources>