<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/style_activity_background_gradient"  >
    
	<TextView
	    android:id="@+id/taskName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:background="#AF1D0600"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_name"
	    android:textColor="#66CCFF"
	    android:textSize="16sp" />
	
	<TextView
	    android:id="@+id/taskDescription"
	    android:layout_width="match_parent"
	    android:layout_height="164dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="48dp"
	    android:background="#3F1b2600"
	    android:maxLines="3"
	    android:paddingLeft="25dp"
	    android:paddingTop="125dp"
	    android:text="@string/adapter_task_description"
	    android:textColor="#fff" />
    
	<!--  category/assigned to - different from projects -->

	<TextView
	    android:id="@+id/taskCategory"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="82dp"
	    android:maxLines="2"
	    android:paddingLeft="25dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_category"
	    android:textColor="#fff" />
	
	<TextView 
	    android:id="@+id/taskAssignedTo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#fff"
	    android:text="@string/adapter_task_assigned"
	    android:paddingLeft="10dp"
	    android:layout_marginLeft="220dp"
	    android:layout_marginRight="10dp"
	    android:paddingTop="10dp"
	    android:layout_marginTop="82dp"
		android:maxLines="2" />
	
	<TextView 
	    android:id="@+id/taskEndDate"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:textColor="#fff"
	    android:text="@string/adapter_task_end_date"
	    android:layout_marginTop="47dp"
	    android:layout_marginLeft="220dp"
	    android:paddingTop="10dp"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp" />
	
	<ImageView
	    android:id="@+id/taskEdit"
	    android:layout_width="25dp"
	    android:layout_height="25dp"
	    android:layout_alignBottom="@+id/taskName"
	    android:layout_alignRight="@id/taskEndDate"
	    android:background="@drawable/edit_icon"
	    android:contentDescription="@string/project_type_prompt"
	    android:layout_marginBottom="5dp"
	    android:textSize="12sp" />

	<TextView
	    android:id="@+id/taskPriority"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/taskEndDate"
	    android:layout_alignTop="@+id/taskName"
	    android:background="@drawable/rounded_border_green"
	    android:layout_marginTop="5dp"
	    android:paddingBottom="5dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="5dp"
	    android:text="@string/adapter_task_priority"
	    android:textColor="#000" />

	<TextView
	    android:id="@+id/taskStartDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@+id/taskEndDate"
	    android:layout_alignBottom="@+id/taskEndDate"
	    android:layout_alignLeft="@+id/taskName"
	    android:layout_marginLeft="18dp"
	    android:paddingBottom="10dp"
	    android:paddingLeft="8dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_task_start_date"
	    android:textColor="#fff" />

	<TextView
	    android:id="@+id/taskStatus"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/taskStartDate"
	    android:layout_below="@+id/taskCategory"
	    android:layout_marginTop="22dp"
	    android:maxLines="3"
	    android:paddingLeft="8dp"
	    android:text="@string/adapter_task_status"
	    android:textColor="#fff" />
	
</RelativeLayout>
