<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/style_activity_background_gradient"  >
    
	<TextView
	    android:id="@+id/adapter_contact_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:background="#AF1D0600"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_contact_name"
	    android:textColor="#66CCFF"
	    android:textSize="16sp" />
	
	<TextView
	    android:id="@+id/adapter_contact_space"
	    android:layout_width="match_parent"
	    android:layout_height="104dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="48dp"
	    android:background="#3F1b2600"
	    android:maxLines="3"
	    android:paddingLeft="10dp"
	    android:paddingTop="75dp"
	    android:text="@string/adapter_contact_space"
	    android:textColor="#fff" />
	
	<TextView
	    android:id="@+id/adapter_contact_notes"
	    android:layout_width="200dp"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="100dp"
	    android:layout_marginTop="47dp"
	    android:maxLines="5"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_contact_notes"
	    android:textColor="#fff" />
	
	<ImageView
	    android:id="@+id/contactEdit"
	    android:layout_width="25dp"
	    android:layout_height="25dp"
	    android:layout_alignBottom="@+id/adapter_contact_name"
	    android:layout_alignRight="@id/adapter_contact_notes"
	    android:background="@drawable/edit_icon"
	    android:contentDescription="@string/event_type_prompt"
	    android:layout_marginBottom="5dp"
	    android:textSize="12sp" />

	<ImageView
	    android:id="@+id/adapter_contact_image"
	    android:layout_width="80dp"
	    android:layout_height="80dp"
	    android:layout_alignLeft="@+id/adapter_contact_space"
	    android:layout_alignTop="@+id/adapter_contact_space"
	    android:layout_marginTop="14dp"
	    android:contentDescription="@string/adapter_contact_image"
	    android:layout_marginLeft="10dp" />
	
</RelativeLayout>
