<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/ProjectInspire.theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/style_activity_background_gradient"
    tools:context="com.projectinspire.activities.MainActivity"
    tools:ignore="MergeRootFrame" >

    <!-- Image view for the Project Inspire icon -->

    <ImageView
        android:id="@+id/projectInspireIconImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/hello_world" />
    
    <!--Login -->
    
    <!-- Register -->
    
	<EditText
		android:id="@+id/mainEditEmail"
	    android:layout_width="250dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/projectInspireIconImage"
	    android:layout_centerHorizontal="true"
	    android:background="#FFF"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/main_edit_email_address"
	    android:inputType="textEmailAddress"
	    android:maxLength="30"
	    android:paddingBottom="15dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:paddingTop="15dp"
	    android:textColor="#000"
	    android:textSize="13sp" />
    
	<EditText
		android:id="@+id/mainEditPassword"
	    android:layout_width="250dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/mainEditEmail"
	    android:layout_centerHorizontal="true"
	    android:background="#FFF"
	    android:ems="10"
	    android:gravity="center"
	    android:hint="@string/main_edit_password"
	    android:inputType="textPassword"
	    android:maxLength="30"
	    android:layout_marginTop="15dp"
	    android:paddingBottom="15dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:paddingTop="15dp"
	    android:textColor="#000"
	    android:textSize="13sp" />
	
	<Button
		android:id="@+id/mainBtnLogin"
	    android:layout_width="251dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="320dp"
	    android:layout_centerHorizontal="true"
	    android:background="#0c4661"
	    android:text="@string/main_btn_login"
	    android:textSize="16sp" />
	
    <TextView
        android:id="@+id/mainTxtRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainBtnLogin"
        android:paddingLeft="55dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/main_txt_register"
        android:textColor="#fff"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/mainTxtForgotPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mainTxtRegister"
        android:paddingLeft="90dp"
        android:paddingBottom="25dp"
        android:paddingTop="10dp"
        android:text="@string/main_txt_forgot_password"
        android:textColor="#fff"
        android:textSize="13sp" />
    
</RelativeLayout>