<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="604dp"
	    android:background="@drawable/style_activity_background_gradient"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="20dp" >
    
	    <!--  Description -->

		<TextView
		    android:id="@+id/txtRegisterDescription"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingBottom="50dp"
		    android:paddingLeft="5dp"
		    android:text="@string/change_user_details_description"
		    android:textColor="#FFF"
		    android:textSize="16sp" />
	
		<!-- Forename -->
	    <TextView
	        android:id="@+id/txtRegisterForename"
	        android:layout_below="@id/txtRegisterDescription"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:text="@string/register_lbl_forename"
	        android:textSize="14sp" 
	        android:textColor="#fff" />
		
	     <EditText
	         android:id="@+id/editRegisterForename"
	         android:layout_width="200dp"
	         android:layout_height="wrap_content"
	         android:layout_alignBaseline="@+id/txtRegisterForename"
	         android:layout_alignBottom="@+id/txtRegisterForename"
	         android:layout_alignRight="@+id/txtRegisterDescription"
	         android:background="#FFF"
	         android:ems="10"
	         android:gravity="center"
	         android:hint="@string/register_edit_forename"
	         android:inputType="textPersonName"
	         android:maxLength="30"
	         android:layout_marginRight="5dp"
	         android:paddingBottom="15dp"
	         android:paddingLeft="5dp"
	         android:paddingRight="5dp"
	         android:paddingTop="15dp"
	         android:textColor="#000"
	         android:textSize="13sp" />

	   	 <!--  Change the image of the user; requires selection of Circular Image View -->
	   	 <TextView
	   	     android:id="@+id/txtRegisterUserImage"
	   	     android:layout_width="wrap_content"
	   	     android:layout_height="wrap_content"
	   	     android:layout_alignLeft="@+id/txtRegisterSurname"
	   	     android:layout_alignTop="@+id/imgviewUserImage"
	   	     android:layout_marginTop="20dp"
	   	     android:text="@string/register_lbl_picture"
	   	     android:textColor="#fff"
	   	     android:textSize="14sp" />

	   	 <com.projectinspire.utilities.CircularImageView
	   	     android:id="@+id/imgviewUserImage"
	   	     android:layout_width="60dp"
	   	     android:layout_height="60dp"
	   	     android:layout_alignLeft="@+id/editRegisterSurname"
	   	     android:layout_below="@+id/editRegisterSurname"
	   	     android:layout_marginLeft="39dp"
	   	     android:layout_marginTop="59dp"
	   	     android:contentDescription="@string/dashboard_user_image"
	   	     android:src="@drawable/icon_person" />

	   	 <!--  The new surname -->
	   	 <TextView
	   	     android:id="@+id/txtRegisterSurname"
	   	     android:layout_width="wrap_content"
	   	     android:layout_height="wrap_content"
	   	     android:layout_alignRight="@+id/txtRegisterForename"
	   	     android:layout_below="@+id/editRegisterForename"
	   	     android:layout_marginTop="78dp"
	   	     android:text="@string/register_lbl_surname"
	   	     android:textColor="#fff"
	   	     android:textSize="14sp" />

	   	 <EditText
	   	     android:id="@+id/editRegisterSurname"
	   	     android:layout_width="200dp"
	   	     android:layout_height="wrap_content"
	   	     android:layout_alignBaseline="@+id/txtRegisterSurname"
	   	     android:layout_alignBottom="@+id/txtRegisterSurname"
	   	     android:layout_alignLeft="@+id/editRegisterForename"
	   	     android:background="#FFF"
	   	     android:ems="10"
	   	     android:gravity="center"
	   	     android:hint="@string/register_edit_surname"
	   	     android:inputType="textPersonName"
	   	     android:maxLength="30"
	   	     android:paddingBottom="15dp"
	   	     android:paddingLeft="5dp"
	   	     android:paddingRight="5dp"
	   	     android:paddingTop="15dp"
	   	     android:textColor="#000"
	   	     android:textSize="13sp" >

	   	     <requestFocus />
	   	 </EditText>

	   	 <!--  Change the details of the user -->

	     <Button
	   	     android:id="@+id/btnRegisterChangeUserImage"
	   	     android:layout_width="200dp"
	   	     android:layout_height="wrap_content"
	   	     android:layout_below="@+id/imgviewUserImage"
	   	     android:layout_centerHorizontal="true"
	   	     android:layout_marginTop="25dp"
	   	     android:background="#0c4661"
	   	     android:text="@string/register_btn_picture"
	   	     android:textColor="#fff"
	   	     android:textSize="16sp" />
	     
	   	 <Space
	   	     android:id="@+id/spaceRegisterButton"
	   	     android:layout_width="match_parent"
	   	     android:layout_height="30dp"
	   	     android:layout_below="@id/btnRegisterChangeUserImage" />

	   	<!--  Register account  -->
	   	 <Button
	       	 android:id="@+id/btnRegisterSubmit"
	       	 android:layout_width="200dp"
	       	 android:layout_height="wrap_content"
	       	 android:layout_below="@id/btnRegisterChangeUserImage"
	       	 android:layout_marginTop="20dp"
	      	 android:layout_centerHorizontal="true"
	         android:background="#0c4661"
	      	 android:text="@string/btn_change_user_details"
	         android:textSize="16sp"
	         android:textColor="#fff" />
 
	</RelativeLayout>
</ScrollView>

