<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/style_activity_background_gradient"  >
    
	<TextView
	    android:id="@+id/projectName"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="10dp"
	    android:background="#AF1D0600"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_project_name"
	    android:textColor="#66CCFF"
	    android:textSize="16sp" />
	
	<TextView
	    android:id="@+id/projectDescription"
	    android:layout_width="match_parent"
	    android:layout_height="114dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:layout_marginTop="48dp"
	    android:background="#3F1b2600"
	    android:maxLines="3"
	    android:paddingLeft="25dp"
	    android:paddingTop="45dp"
	    android:text="@string/adapter_project_description"
	    android:textColor="#fff" />
    
	<!--  <TextView 
	    android:id="@+id/projectMembers"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#fff"
	    android:text="@string/adapter_project_members"
	    android:paddingLeft="10dp"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:paddingTop="10dp"
	    android:layout_marginTop="82dp"
		android:maxLines="2" /> -->
	
	<TextView
	    android:id="@+id/projectStartDate"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="47dp"
	    android:paddingBottom="10dp"
	    android:paddingLeft="25dp"
	    android:paddingTop="10dp"
	    android:text="@string/adapter_project_start_date"
	    android:textColor="#fff" />
	
	<TextView 
	    android:id="@+id/projectEndDate"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:textColor="#fff"
	    android:text="@string/adapter_project_end_date"
	    android:layout_marginTop="7dp"
	    android:layout_marginLeft="220dp"
	    android:paddingTop="50dp"
	    android:paddingBottom="10dp"
	    android:paddingLeft="10dp" />

	<ImageView
	    android:id="@+id/projectEdit"
	    android:layout_width="25dp"
	    android:layout_height="25dp"
	    android:layout_alignBottom="@+id/projectName"
	    android:layout_alignRight="@id/projectEndDate"
	    android:background="@drawable/edit_icon"
	    android:contentDescription="@string/project_type_prompt"
	    android:layout_marginBottom="5dp"
	    android:textSize="12sp" />

	<TextView
	    android:id="@+id/projectStatus"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/projectName"
	    android:layout_alignLeft="@+id/projectEndDate"
	    android:background="@drawable/rounded_border_green"
	    android:layout_marginLeft="10dp"
	    android:layout_marginTop="5dp"
	    android:paddingBottom="5dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingTop="5dp"
	    android:text="@string/adapter_project_status"
	    android:textColor="#000" />
	
</RelativeLayout>
